[DLAB-939]: billing grid align fixes

--- a/services/self-service/src/main/resources/webapp/src/app/reporting/reporting-grid/reporting-grid.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/reporting/reporting-grid/reporting-grid.component.scss
@@ -26,6 +26,10 @@
   min-width: 1100px;
   overflow: auto;
 
+  .mat-cell {
+    vertical-align: middle;
+  }
+
   tr {
     th {
       font-size: 11px;
@@ -69,6 +73,18 @@
 
   .th_charges {
     width: 8%;
+    padding-right: 15px;
+    text-align: right;
+  }
+
+  .mat-column-charge {
+    text-align: right;
+  }
+
+  .filter-row {
+    .actions {
+      text-align: right;
+    }
   }
 }
 
